--- a/test/gm_monster_test.csproj
+++ b/test/gm_monster_test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\gm_monster.csproj" />
+    <ProjectReference Include="..\src\gm_monster.csproj" />
   </ItemGroup>
 
 </Project>
